--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <h1>지욱님의 웹프레젠테이션 모음</h1>
     <p>아래 링크를 클릭하면 각 프레젠테이션 페이지로 이동합니다:</p>
     <ul>
-        <li>kis-shuttle-system/KIS 셔틀 시스템</a></li>
-        <li><a href="team-inta></li>
-        <li>schoolbus%20Intro/스쿨버스 소개</a></li>
+        <li><a href="https://beside1s-lgtm.github.io/wallaby/my%20presentation/schoolbus%20Intro/ 셔틀 시스템</a></li>
     </ul>
 </body>
 </html>
