--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>지욱님의 웹프레젠테이션 모음</title>
+    <style>
+        body { font-family: Arial, sans-serif; padding: 40px; background-color: #f0f8ff; }
+        h1 { color: #333; }
+        a { text-decoration: none; color: #007acc; font-size: 18px; }
+        a:hover { text-decoration: underline; }
+    </style>
 </head>
 <body>
     <h1>지욱님의 웹프레젠테이션 모음</h1>
-    <p>아래 링크를 클릭하면 각 프레젠테이션 페이지로 이동합니다:</p>
+    <p>아래 링크를 클릭하면 프레젠테이션 페이지로 이동합니다:</p>
     <ul>
-        <li><a href="https://beside1s-lgtm.github.io/wallaby/my%20presentation/schoolbus%20Intro/ 셔틀 시스템</a></li>
+        <li><a href="https1s-lgtm.github.io/wallaby/my%20presentation/schoolbus%20Intro/셔틀버스 관리 시스템 소개</a></li>
     </ul>
 </body>
 </html>
