--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>지욱님의 웹프레젠테이션 모음</h1>
     <p>아래 링크를 클릭하면 프레젠테이션 페이지로 이동합니다:</p>
     <ul>
-        <li><a href="https1s-lgtm.github.io/wallaby/my%20presentation/schoolbus%20Intro/셔틀버스 관리 시스템 소개</a></li>
+        <li><a href="https://beside1s-lgtm.github.io/wallaby/my%20presentation/schoolbus%20Intro/a></li>
     </ul>
 </body>
 </html>
