--- a/index.html
+++ b/index.html
@@ -1,32 +1,84 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>지욱님의 웹프레젠테이션 모음</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-        :root {
-            --bg: #f0f8ff;
-            --text: #333;
-            --link: #007acc;
-        }
-        body { font-family: Arial, sans-serif; padding: 40px; background-color: var(--bg); }
-        h1 { color: var(--text); margin-bottom: 12px; }
-        p { color: #444; }
-        ul { padding-left: 20px; }
-        a { text-decoration: none; color: var(--link); font-size: 18px; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8" />
+  <title>지욱님의 웹프레젠테이션 모음</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root {
+      --bg: #f0f8ff;
+      --text: #222;
+      --link: #007acc;
+      --link-hover: #005a99;
+    }
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: var(--bg);
+      font-family: Arial, Helvetica, sans-serif;
+      color: var(--text);
+    }
+    main {
+      padding: 40px 28px;
+      max-width: 920px;
+      margin: 0 auto;
+    }
+    h1 {
+      margin: 0 0 10px;
+      font-size: 28px;
+      line-height: 1.3;
+    }
+    p.desc {
+      margin: 0 0 24px;
+      color: #444;
+    }
+    ul.list {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+    }
+    .item {
+      background: #fff;
+      border: 1px solid #e6eef6;
+      border-radius: 10px;
+      padding: 16px 18px;
+      margin-bottom: 14px;
+    }
+    .item h2 {
+      margin: 0;
+      font-size: 20px;
+      line-height: 1.4;
+      font-weight: 600;
+    }
+    /* 링크를 '제목'에만 적용, URL은 노출하지 않음 */
+    .item h2 a {
+      color: var(--link);
+      text-decoration: none;
+    }
+    .item h2 a:hover {
+      color: var(--link-hover);
+      text-decoration: underline;
+    }
+    .item h2 a:focus-visible {
+      outline: 3px solid #bfe4ff;
+      outline-offset: 3px;
+      border-radius: 6px;
+    }
+  </style>
 </head>
 <body>
+  <main>
     <h1>지욱님의 웹프레젠테이션 모음</h1>
-    <p>아래 링크를 클릭하면 프레젠테이션 페이지로 이동합니다:</p>
-    <ul>
-        <!-- 올바른 a 태그 + URL 인코딩 적용 -->
-        <li>
-            <a href="https://beside1s-lgtm.github.io/wallaby/my%20presentation/schoolbus%20Intro/%EC%8A%A4%EC%BF%A8%EB%B2%84%EC%8A%A4%20%EC%86%8C%EA%B0%9C"
-               target="_blank
-        </li>
+    <p class="desc">아래 <strong>제목</strong>을 클릭하면 프레젠테이션 페이지로 이동합니다.</p>
+    <ul class="list">
+      <li class="item">
+        <h2>
+          <a href="https://beside1s-lb.io/wallaby/my%20presentation/schoolbus%20Intro/
+            스쿨버스 소개
+          </a>
+        </h2>
+      </li>
     </ul>
+  </main>
 </body>
 </html>
