--- a/my presentation/schoolbus Intro/index.html
+++ b/my presentation/schoolbus Intro/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>셔틀버스 관리 시스템 소개</title>
+    <title>KIS 스쿨버스 시스템 소개</title>
     
     <!-- 기본 폰트 (모든 결과물에 포함) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fonts-archive/Paperlogy/subsets/Paperlogy-dynamic-subset.css" type="text/css"/>
@@ -255,8 +255,8 @@
 
         <!-- Hero Section -->
         <section class="slide hero">
-            <h1>셔틀버스 관리 시스템</h1>
-            <p>Web/App 기반 셔틀버스 통합 관리 솔루션 소개</p>
+            <h1>KIS 스쿨버스 시스템</h1>
+            <p>Web/App 기반 스쿨버스 통합 관리 솔루션 소개</p>
         </section>
 
         <!-- Slide 1: 시스템 개요 -->
@@ -289,7 +289,7 @@
                         <li>화면 터치 방식의 간편하고 정확한 승/하차 체크 시스템 구현함</li>
                         <li>탑승 신청 기반 좌석 자동 배정 및 수동 조정 기능 제공함</li>
                         <li>탑승하지 않는 학생을 학부모가 직접 등록하여 원활한 승차 관리 가능</li>
-                        <li>모든 셔틀버스 관련 업무를 하나의 관리체계에 통합</li>
+                        <li>모든 스쿨버스 관련 업무를 하나의 관리체계에 통합</li>
                     </ul>
                 </div>
             </div>
@@ -494,4 +494,5 @@
     </script>
 </body>
 </html>
+
 
