--- a/my presentation/Development_process/index.html
+++ b/my presentation/Development_process/index.html
@@ -304,6 +304,21 @@
             </div>
         </section>
 
+        <!-- 슬라이드 7: 교육적 활용 -->
+        <section class="slide">
+            <div class="dominant-visual">
+                <img src="assets/e.png" alt="교육 활용 이미지" class="slide-image" style="max-height: 50%;">
+            </div>
+            <div class="text-content">
+                <h1>7. 교육적 활용</h1>
+                <ul>
+                    <li><strong>AI 이해 교육</strong></li>
+                    <li><strong>코딩 입문 교육</strong></li>
+                    <li><strong>지역사회 기반 PBL 학습</strong></li>
+                </ul>
+            </div>
+        </section>
+
         <!-- 슬라이드 8: Q&A -->
         <section class="slide">
             <div class="dominant-visual">
@@ -380,6 +395,7 @@
     </script>
 </body>
 </html>
+
 
 
 
