--- a/my presentation/Development_process/index.html
+++ b/my presentation/Development_process/index.html
@@ -312,9 +312,9 @@
             <div class="text-content">
                 <h1>7. 교육적 활용</h1>
                 <ul>
-                    <li><strong>AI 이해 교육</strong></li>
-                    <li><strong>코딩 입문 교육</strong></li>
-                    <li><strong>지역사회 기반 PBL 학습</strong></li>
+                    <li><strong>AI 이해 교육:</strong> AI가 명령을 어떻게 수행하는지</li>
+                    <li><strong>코딩 입문 교육:</strong> AI가 만든 코드를 보고 분석</li>
+                    <li><strong>지역사회 기반 PBL 학습:</strong> 문제를 찾아 해결하는 프로그램 개발</li>
                 </ul>
             </div>
         </section>
@@ -395,6 +395,7 @@
     </script>
 </body>
 </html>
+
 
 
 
