--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
       line-height: 1.4;
       font-weight: 600;
     }
-    /* 링크를 '제목'에만 적용, URL은 노출하지 않음 */
     .item h2 a {
       color: var(--link);
       text-decoration: none;
@@ -73,8 +72,8 @@
     <ul class="list">
       <li class="item">
         <h2>
-          <a href="https://beside1s-lb.io/wallaby/my%20presentation/schoolbus%20Intro/
-            스쿨버스 소개
+          <a https://beside1s-lgtm.github.io/wallaby/my%20presentation/Development_process/
+            FIREBASE STUDIO와 함께 한 KIS 스쿨버스 매니저 개발 과정>
           </a>
         </h2>
       </li>
