--- a/index.html
+++ b/index.html
@@ -28,104 +28,21 @@
       max-width: 920px;
       margin: 0 auto;
     }
-    h1 {
-      margin: 0 0 10px;
-      font-size: 28px;
-      line-height: 1.3;
-    }
-    p.desc {
-      margin: 0 0 24px;
-      color: var(--muted);
-    }
-    .toolbar {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-bottom: 18px;
-      color: #555;
-      font-size: 14px;
-      flex-wrap: wrap;
-    }
-    .toolbar .hint {
-      opacity: .9;
-    }
-    .toolbar .reload {
-      padding: 6px 10px;
-      background: #fff;
-      border: 1px solid var(--card-border);
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    ul.list {
-      list-style: none;
-      padding-left: 0;
-      margin: 0;
-    }
-    .item {
-      background: var(--card);
-      border: 1px solid var(--card-border);
-      border-radius: 10px;
-      padding: 16px 18px;
-      margin-bottom: 14px;
-    }
-    .item h2 {
-      margin: 0 0 4px;
-      font-size: 20px;
-      line-height: 1.4;
-      font-weight: 600;
-    }
-    .item h2 a {
-      color: var(--link);
-      text-decoration: none;
-    }
-    .item h2 a:hover {
-      color: var(--link-hover);
-      text-decoration: underline;
-    }
-    .item h2 a:focus-visible {
-      outline: 3px solid var(--focus);
-      outline-offset: 3px;
-      border-radius: 6px;
-    }
-    .item .path {
-      margin: 0;
-      color: #667;
-      font-size: 13px;
-      word-break: break-all;
-      opacity: .9;
-    }
-    .empty,
-    .error,
-    .loading {
-      background: #fffdf5;
-      border: 1px dashed #ecd9a2;
-      color: #6b5d2d;
-      padding: 14px 16px;
-      border-radius: 10px;
-      margin: 16px 0;
-      font-size: 14px;
-    }
-    .error {
-      background: #fff5f5;
-      border-color: #f2c7c7;
-      color: #7a2e2e;
-    }
-    .loading {
-      background: #f5fbff;
-      border-color: #cfe7f7;
-      color: #214a6b;
-    }
-    .sr-only {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      padding: 0;
-      margin: -1px;
-      overflow: hidden;
-      clip: rect(0, 0, 0, 0);
-      white-space: nowrap;
-      border: 0;
-    }
+    h1 { margin: 0 0 10px; font-size: 28px; line-height: 1.3; }
+    p.desc { margin: 0 0 24px; color: var(--muted); }
+    .toolbar { display: flex; gap: 10px; align-items: center; margin-bottom: 18px; color: #555; font-size: 14px; flex-wrap: wrap; }
+    .toolbar .reload { padding: 6px 10px; background: #fff; border: 1px solid var(--card-border); border-radius: 8px; cursor: pointer; }
+    ul.list { list-style: none; padding-left: 0; margin: 0; }
+    .item { background: var(--card); border: 1px solid var(--card-border); border-radius: 10px; padding: 16px 18px; margin-bottom: 14px; }
+    .item h2 { margin: 0 0 4px; font-size: 20px; line-height: 1.4; font-weight: 600; }
+    .item h2 a { color: var(--link); text-decoration: none; }
+    .item h2 a:hover { color: var(--link-hover); text-decoration: underline; }
+    .item h2 a:focus-visible { outline: 3px solid var(--focus); outline-offset: 3px; border-radius: 6px; }
+    .item .path { margin: 0; color: #667; font-size: 13px; word-break: break-all; opacity: .9; }
+    .empty, .error, .loading { background: #fffdf5; border: 1px dashed #ecd9a2; color: #6b5d2d; padding: 14px 16px; border-radius: 10px; margin: 16px 0; font-size: 14px; }
+    .error { background: #fff5f5; border-color: #f2c7c7; color: #7a2e2e; }
+    .loading { background: #f5fbff; border-color: #cfe7f7; color: #214a6b; }
+    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0; }
   </style>
 </head>
 <body>
@@ -135,7 +52,7 @@
 
     <div class="toolbar" aria-live="polite" aria-atomic="true">
       <button class="reload" id="reloadBtn" type="button">목록 새로고침</button>
-      <span class="hint">자동으로 하위 디렉토리를 인식해, <code>index.html</code> 등이 있는 폴더만 보여줘요.</span>
+      <span class="hint">하위(손자) 폴더까지 자동 인식해, <code>index.html</code>이 있는 폴더만 보여줘요.</span>
       <span class="sr-only" id="liveRegion"></span>
     </div>
 
@@ -144,17 +61,15 @@
   </main>
 
   <script>
-    // ====== 구성 (필요시만 바꾸세요) ======
+    // ====== 구성 ======
     const CONFIG = {
       owner: 'beside1s-lgtm',
       repo: 'wallaby',
       branch: 'main',
-      basePath: '',        // 'subfolder'처럼 특정 하위 경로부터 시작하고 싶으면 지정
-      maxDepth: 1,         // 목록 탐색 깊이 (1=현재 폴더만, 2=하위 1단계까지)
+      basePath: 'my presentation', // 이 폴더부터 탐색
+      maxDepth: 2,                 // 손자 폴더까지 확인
       excludeDirs: ['.git', '.github', 'assets', 'img', 'images', 'node_modules'],
-      // GitHub API 요청 상한(비로그인 60/h). 토큰이 있으면 주석 해제 후 사용 가능.
-      // token: 'ghp_xxx',
-      // 폴더 표시 이름을 바꾸고 싶으면 여기에 매핑(선택)
+      // token: 'ghp_xxx', // 필요 시 사용(공개 저장소에 커밋 금지)
       titleMap: {
         // 'my presentation/Development_process': 'FIREBASE STUDIO와 함께 한 KIS 스쿨버스 매니저 개발 과정'
       }
@@ -162,34 +77,24 @@
 
     // ====== 유틸 ======
     const $ = (sel) => document.querySelector(sel);
-
-    const encodePathSegments = (p) =>
-      p.split('/').filter(Boolean).map(encodeURIComponent).join('/');
-
+    const encodePathSegments = (p) => p.split('/').filter(Boolean).map(encodeURIComponent).join('/');
     const toApiUrl = (path='') =>
       `https://api.github.com/repos/${CONFIG.owner}/${CONFIG.repo}/contents/${encodePathSegments(path)}?ref=${encodeURIComponent(CONFIG.branch)}`;
-
     const toPagesUrl = (path='') =>
       `https://${CONFIG.owner}.github.io/${CONFIG.repo}/${encodePathSegments(path)}/`;
-
     const hasIndexFile = (entries) => {
       if (!Array.isArray(entries)) return false;
       const names = new Set(entries.map(e => (e.name || '').toLowerCase()));
       return names.has('index.html') || names.has('index.htm') || names.has('index.md');
     };
-
     const isDirEntry = (e) => e && e.type === 'dir';
-
-    const shouldExclude = (name) =>
-      CONFIG.excludeDirs.some(ex => ex.toLowerCase() === name.toLowerCase());
-
+    const shouldExclude = (name) => CONFIG.excludeDirs.some(ex => ex.toLowerCase() === name.toLowerCase());
     const prettyTitle = (path) => {
       const mapped = CONFIG.titleMap[path];
       if (mapped) return mapped;
       const last = path.split('/').filter(Boolean).pop() || path;
       return last.replace(/[-_]+/g, ' ');
     };
-
     const headers = () => {
       const h = { 'Accept': 'application/vnd.github.v3+json' };
       if (CONFIG.token) h['Authorization'] = `Bearer ${CONFIG.token}`;
@@ -209,43 +114,34 @@
 
       while (queue.length) {
         const { path, depth: d } = queue.shift();
-        let entries;
-        try {
-          entries = await fetchDirEntries(path);
-        } catch (err) {
-          // 상위에서 에러 처리
-          throw err;
-        }
+        const entries = await fetchDirEntries(path);
 
-        // 현재 경로에서 하위 디렉토리만 추출
-        const dirs = entries
-          .filter(isDirEntry)
-          .filter(e => !shouldExclude(e.name));
+        const dirs = entries.filter(isDirEntry).filter(e => !shouldExclude(e.name));
 
-        // 각 디렉토리가 프레젠테이션(=index.* 보유)인지 확인
         for (const dir of dirs) {
           const childPath = [path, dir.name].filter(Boolean).join('/');
+
           let childEntries;
           try {
             childEntries = await fetchDirEntries(childPath);
-          } catch (err) {
-            // 읽기 실패하면 건너뜀
+          } catch (_) {
             continue;
           }
+
           if (hasIndexFile(childEntries)) {
-            const depthFromBase = childPath.replace(/^\/|\/$/g, '').split('/').length
-                                   - (CONFIG.basePath ? CONFIG.basePath.split('/').length : 0);
-            // 손자 폴더만 수집하려면 depthFromBase === 2 조건을 사용
-            if (depthFromBase === 2) {
-              results.push({
-                path: childPath,
-                url: toPagesUrl(childPath),
-                title: prettyTitle(childPath)
-              });
-            }
+            results.push({
+              path: childPath,
+              url: toPagesUrl(childPath),
+              title: prettyTitle(childPath)
+            });
           }
 
-      // 정렬: 제목 기준
+          if (d + 1 < CONFIG.maxDepth) {
+            queue.push({ path: childPath, depth: d + 1 });
+          }
+        }
+      }
+
       results.sort((a, b) => a.title.localeCompare(b.title, 'ko'));
       return results;
     }
@@ -271,7 +167,7 @@
         a.href = item.url;
         a.textContent = item.title;
         a.rel = 'noopener';
-        a.target = '_blank'; // 새 탭 열기
+        a.target = '_blank';
         h2.appendChild(a);
 
         const p = document.createElement('p');
@@ -317,8 +213,6 @@
     }
 
     $('#reloadBtn').addEventListener('click', load);
-
-    // 페이지 진입 시 자동 로딩
     load();
   </script>
 </body>
