--- a/my presentation/PAR System Intro/index.html
+++ b/my presentation/PAR System Intro/index.html
@@ -260,8 +260,29 @@
         <a href="#slide-2" class="nav-btn prev"><i class="fas fa-arrow-up"></i></a>
         <a href="#slide-4" class="nav-btn next"><i class="fas fa-arrow-down"></i></a>
     </section>
-
-    <!-- 슬라이드 4: 개인 성장 추이 및 팀 편성 시각화 (짝수 - 텍스트/시각) -->
+    
+    <!-- 슬라이드 4: 스포츠클럽 운영 관리 (짝수 - 텍스트/시각) -->
+    <section class="slide" id="slide-6">
+        <div class="slide-content">
+            <div class="text-container">
+                <h2>스포츠클럽운영 관리</h2>
+                <ul>
+                    <li>수행 결과를 바탕으로 팀 자동 편성</li>
+                    <li>리그/토너먼트/개인승점 리그로 대진표 생성</li>
+                    <li>스포츠 종목에 맞는 경기 기록표 작성</li>
+                </ul>
+            </div>
+            <!-- 2순위: 지배적 시각 요소 (아이콘) -->
+            <div class="visual-container">
+                <img src="assets/6.png" alt="대회 관리 기능" class="dominant-icon-image"></i>
+            </div>
+        </div>
+        <!-- 이전/다음 버튼 -->
+        <a href="#slide-5" class="nav-btn prev"><i class="fas fa-arrow-up"></i></a>
+        <a href="#slide-7" class="nav-btn next"><i class="fas fa-arrow-down"></i></a>
+    </section>
+  
+    <!-- 슬라이드 5: 개인 성장 추이 및 팀 편성 시각화 (짝수 - 텍스트/시각) -->
     <section class="slide" id="slide-4">
         <div class="slide-content">
             <div class="text-container">
@@ -281,7 +302,7 @@
         <a href="#slide-5" class="nav-btn next"><i class="fas fa-arrow-down"></i></a>
     </section>
 
-    <!-- 슬라이드 5: 심층 데이터 분석 (홀수 - 시각/텍스트) -->
+    <!-- 슬라이드 6: 심층 데이터 분석 (홀수 - 시각/텍스트) -->
     <section class="slide" id="slide-5">
         <div class="slide-content">
             <div class="visual-container">
@@ -301,7 +322,7 @@
         <a href="#slide-6" class="nav-btn next"><i class="fas fa-arrow-down"></i></a>
     </section>
 
-    <!-- 슬라이드 6: 지속적인 성장 관리 (짝수 - 텍스트/시각) -->
+    <!-- 슬라이드 7: 지속적인 성장 관리 (짝수 - 텍스트/시각) -->
     <section class="slide" id="slide-6">
         <div class="slide-content">
             <div class="text-container">
@@ -322,7 +343,7 @@
         <a href="#slide-7" class="nav-btn next"><i class="fas fa-arrow-down"></i></a>
     </section>
 
-    <!-- 슬라이드 7: 감사합니다 (신규) -->
+    <!-- 슬라이드 8: 감사합니다 (신규) -->
     <section class="slide thank-you" id="slide-7">
         <h1>감사합니다</h1>
         <i class="fas fa-heart dominant-icon"></i>
