--- a/my presentation/PAR System Intro/index.html
+++ b/my presentation/PAR System Intro/index.html
@@ -82,8 +82,8 @@
 
         /* 이미지 아이콘 (사용자 이미지) */
         .dominant-icon-image {
-            width: 80%; 
-            max-width: 1000px; 
+            width: 100%; 
+            max-width: 100%; 
             height: auto; 
             margin-bottom: 2rem;
             opacity: 0.9;
