--- a/my presentation/PAR System Intro/index.html
+++ b/my presentation/PAR System Intro/index.html
@@ -80,6 +80,11 @@
             opacity: 0.8;
         }
 
+        .slide.hero .dominant-icon-image {
+            max-width: 400px;  /* 원하는 최대 크기 (예: 300px) */
+            width: 80%;        /* 화면 너비 대비 비율 */
+        }
+
         /* 이미지 아이콘 (사용자 이미지) */
         .dominant-icon-image {
             width: 100%; 
